testdata/golden/sema/invalid/enum_missing_body.sg
// Missing body in enum declaration

enum Color =
